# Flask_project

./: index.html12  pyproject.toml  sender_messagi.session
app/: __init__.py  forms.py  tg_send_message.py  views.py
app/static/css/: style.css
app/templates/: base.html  index.html  send_message.html
