[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["maks <makselizarev@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
telethon = "^1.28.5"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
